k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: terraform-k8s-service

spec:
  type: NodePort

  selector:
    app: terraform-k8s-app

  ports:
  - port: 80
    targetPort: 5000
    nodePort: 30081
