k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: terraform-k8s-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: terraform.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: terraform-k8s-service
            port:
              number: 80
